Refactor auth (#35)
* refactor auth.
