# nucleus/api/v1/users.py
@@ -1,47 +1,58 @@
 from typing import Tuple
 
 import connexion
-from flask import request
 
+from nucleus.common.decorators import role_admin_or_user_required
+from nucleus.common.decorators import role_admin_required
 from nucleus.controllers.users import Role
 from nucleus.controllers.users import User
 
 
+@role_admin_required
 def get_users_list() -> dict:
     return User.users_list(connexion.request.args)
 
 
+@role_admin_required
 def create_user() -> Tuple:
-    return User.create(request.json), 201
+    return User.create(connexion.request.json).to_dict(), 201
 
 
+@role_admin_or_user_required
 def get_user(id) -> dict:
-    return User.get(id)
+    return User.get(id).to_dict()
 
 
+@role_admin_or_user_required
 def update_user(id) -> dict:
-    return User.update(id, request.json)
+    return User.update(id, connexion.request.json).to_dict()
 
 
+@role_admin_required
 def delete_user(id) -> Tuple:
     return User.delete(id), 204
 
 
+@role_admin_required
 def get_roles_list() -> dict:
     return Role.roles_list(connexion.request.args)
 
 
+@role_admin_required
 def create_role() -> Tuple:
-    return Role.create(request.json), 201
+    return Role.create(connexion.request.json).to_dict(), 201
 
 
+@role_admin_required
 def get_role(id) -> dict:
-    return Role.get(id)
+    return Role.get(id).to_dict()
 
 
+@role_admin_required
 def update_role(id) -> dict:
-    return Role.update(id, request.json)
+    return Role.update(id, connexion.request.json).to_dict()
 
 
+@role_admin_required
 def delete_role(id) -> Tuple:
     return Role.delete(id), 204
